URL 관련 deprecation warning 문제 해결.